--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ dependencies {
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' // swagger
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+
+
 
 }
 
