--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 
-	implementation("io.springfox:springfox-swagger2:3.0.0") // swagger
-	implementation("io.springfox:springfox-swagger-ui:3.0.0") // swagger
+	//implementation'io.springfox:springfox-swagger2:3.0.0'// swagger
+	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'//
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
 
 
 
