work on JTW token and User registration

--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,17 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 
-	//implementation'io.springfox:springfox-swagger2:3.0.0'// swagger
-	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'//
-
+    // for swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+	// for security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
+	// for jwt token
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 
