--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,13 @@ dependencies {
 
 
 }
+configurations.all {
+	resolutionStrategy.eachDependency { details ->
+		if (details.requested.group == 'org.springframework' &&
+				details.requested.name in ['spring-web', 'spring-webmvc']) {
+			details.useVersion '6.1.6'
+		}
+	}}
 
 tasks.named('test') {
 	useJUnitPlatform()
