--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
 
 }
+
+// use for resolve swagger UI loading conflict
 configurations.all {
 	resolutionStrategy.eachDependency { details ->
 		if (details.requested.group == 'org.springframework' &&
